Removed old profile edit page html

--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -47,7 +47,7 @@
                                     <span>&nbsp;&nbsp;Update profile picture</span>
                                     <input class="upload-picture" type="file" name="picture"></div>
                                 <button id="btn-delete-profile-pic" class="no-style icon-button btn-remove" data-toggle="modal"
-                                        data-target="#delete-picture" title="Remove profile picture"><span
+                                        data-target="#delete-picture" title="Delete profile picture"><span
                                         class="glyphicon glyphicon-trash"></span>
                                 </button>
                             {% else %}
