--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -203,7 +203,7 @@
                                             <input type="file" name="cv">
                                         </span>
                                             <button id="btn-delete-cv" class="no-style icon-button btn-remove" data-toggle="modal"
-                                                    data-target="#delete-cv" title="Remove CV"><span
+                                                    data-target="#delete-cv" title="Delete CV"><span
                                                     class="glyphicon glyphicon-trash"></span>
                                             </button>
                                         </div>
