--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -66,6 +66,7 @@
                     <option value="ModelProgramResource">Model Program</option>
                     <option value="ModelInstanceResource">Model Instance</option>
                     <option value="SWATModelInstanceResource">SWAT Model Instance</option>
+                    <option value="MODFLOWModelInstanceResource">MODFLOW Model Instance</option>
                     <option value="ScriptResource">Script</option>
                 </optgroup>
 
