update discover page with map view; add a discoer_json_view for generating json object from haystack; add discover_view for general haystack facted view; rename customer_form to dicover_form

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -62,7 +62,7 @@
     }
 </style>
 <![endif]-->
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpBuGuKqe4-b5sCzQocptb4MfSLqquncU"></script>
 {% block extra_head %}{% endblock %}
 
 </head>
