--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -10,7 +10,7 @@
                 {% for key, values in facets.fields.items %}
                     {% if values %}
                         <div class="panel-group" id="faceting-{{ key }}">
-                            <div class="panel panel-default">
+                            <div class="panel panel-primary">
                                 <div class="panel-heading">
                                 <h4 class="panel-title">
                                     <a data-toggle="collapse" href="#{{ key }}">
@@ -46,8 +46,9 @@
                                     <ul class="list-group">
                                     {% for item in values %}
                                         {% if item.1 > 0 %}
-                                            <li class="list-group-item">
-                                                <input class="faceted-selections" id="{{ key }}-{{ item.0 }}" value="{{ key }},{{ item.0 }}" type="checkbox" class="pull-left"> &nbsp;&nbsp; {{ item.0 }}
+                                            <li class="list-group-item clearfix">
+                                                <a class="btn btn-default pull-left" onclick="formURL('{{ key }}', '{{ item.0 }}')" role="button">{{ item.0 }}</a>
+                                                <!--<input class="faceted-selections" id="{{ key }}-{{ item.0 }}" value="{{ key }},{{ item.0 }}" type="checkbox" class="pull-left"> &nbsp;&nbsp; {{ item.0 }}-->
                                                     {% if item.1 >= 1 and item.1 < 2 %}
                                                         <span class="label label-default label-pill pull-right badge YellowGreenBlue-colormap-band-9">
                                                     {% elif item.1 >= 2 and item.1 <= 4 %}
@@ -83,6 +84,7 @@
         </div>
         <div class="col-lg-9" id="items">
             {% if not query %}
+                <a class="btn btn-default" href="?q=water" role="button">Link</a>
                 <h4>Enter a search term to find resources on HydroShare</h4>
             {% endif %}
             <div class=resource-search>
@@ -141,7 +143,7 @@
                         {% endif %}
                     </div>
                     <div id="map-view" class="tab-pane fade">
-                        <div id="discover-map" style="width:850px; height:600px"></div>
+                        <div id="discover-map" style="width:850px; height:650px"></div>
                     </div>
                 </div>
             {% endif %}
@@ -157,9 +159,17 @@
     <script src="http://google-maps-utility-library-v3.googlecode.com/svn/tags/keydragzoom/2.0.8/src/keydragzoom_packed.js" type="text/javascript"></script>
     <script src="https://googlemaps.github.io/js-marker-clusterer/src/markerclusterer.js" type="text/javascript"></script>
     <script type="text/javascript">
+        var formURL = function(key, value){
+            //var textSearch = $("#id_q").val();
+            //var searchURL = "?q=" + textSearch;
+            //var windowPath = window.location.pathname;
+            //var requestURL =  windowPath + searchURL;
+            var currentURL = window.location.href;
+            var requestURL = currentURL + "&selected_facets="+key+"_exact:"+value;
+            window.location = requestURL;
+        }
         var json_results = [];
         var markers = [];
-
         var map = null;
         //var bounds = new google.maps.LatLngBounds();
         //var info_window = new google.maps.InfoWindow();
@@ -304,15 +314,17 @@
             window.location = clearURL;
         }
 
-
+        var copySearchResults = function(search_results){
+            search_results.forEach(function(item){
+                json_results.push(item);
+            });
+        }
 
         $(document).ready(function () {
             //console.log(res);
             //google.maps.event.addDomListener(window, 'load', initMap);
             //var titles = [];
-            if($("#id_q").val() == ''){
-                //initMap();
-            }
+
             $("ul.nav-tabs > li > a").on("shown.bs.tab", function (e) {
                 var tabId = $(e.target).attr("href").substr(1);
                 window.location.hash = tabId;
@@ -327,25 +339,21 @@
                         , success: function(data) {
                             console.log("success");
                             //console.log(data);
+                            //markers = [];
+                           // json_results = [];
+                            var search_results = [];
                             for(var j = 0; j < data.length; j++){
                                 var item = $.parseJSON(data[j]);
                                 json_results.push(item);
                             }
                             console.log(json_results);
-                            console.log(json_results);
-                            initMap();
-                            /*$.each(data, function(index, item){
-                                    item = $.parseJSON(item);
-                                    console.log(index + " : " + item);
-                            });*/
+                            //if (!($(search_results).not(json_results).length === 0 && $(json_results).not(search_results).length === 0)){
 
-                            /*$.each( data, function( i, l ) {
-                                json_results.push(l);
-                            });
+                            //   copySearchResults(search_results);
+                                initMap();
 
-                            for(var k = 0; k < json_results.length; k++){
-                                console.log(json_results[k]);
-                            }*/
+                            //}
+                            //console.log(json_results);
 
                         }
                         , failure: function(data){
