--- a/hs_collection_resource/templates/pages/collectionresource.html
+++ b/hs_collection_resource/templates/pages/collectionresource.html
@@ -421,7 +421,7 @@
                         type: "POST",
                         url: $form.attr('action'),
                         dataType: "json",
-                        data: {"collection_items": resource_id_list},
+                        data: {"resource_id_list": resource_id_list},
                         success: function(result)
                         {
                             /* The div contains now the updated form */
